<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.tagreed.abnd.musicalapp.MainActivity"
    android:layout_height="match_parent"
    android:layout_width="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
<RelativeLayout
    android:layout_weight="1"
    android:layout_width="@dimen/WidthLinearVerticalSize"
    android:layout_height="match_parent"
    android:background="@color/colorLibraryLabel">
    <TextView
        android:layout_weight="1"
        android:id="@+id/LibraryLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LibraryLabel"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/TextSizeXL"
        android:layout_marginTop="@dimen/Margin10Size"
        android:layout_marginLeft="10dp"/>
    <TextView
        android:layout_weight="1"
        android:id="@+id/ExploreLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ExploreLabel"
        android:textColor="@color/colorBlack"
        android:textAppearance="?android:textAppearanceSmall"
        android:layout_alignBaseline="@+id/LibraryLabel"
        android:layout_alignBottom="@+id/LibraryLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
</RelativeLayout>
</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_weight="1"
            android:layout_width="@dimen/WidthLinearVerticalSize"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/Margin10Size"
            android:textAppearance="?android:textAppearanceSmall"
            android:textStyle="bold"
            android:text="@string/RecentAdded"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/Margin10Size"
                android:textAppearance="?android:textAppearanceSmall"
                android:text="@string/MainActivityDescription"/>
    </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/Margin30Size">
        <RelativeLayout
            android:layout_marginTop="@dimen/Margin10Size"
            android:layout_weight="1"
            android:layout_width="@dimen/WidthLinearVerticalSize"
            android:layout_height="wrap_content">
<ImageView
    android:id="@+id/MusicOne"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:src="@drawable/musicplayer128"
    android:layout_alignParentLeft="true"
    android:layout_marginLeft="@dimen/Margin10Size"/>
            <TextView
                android:id="@+id/RecentOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/MusicOne"
                android:layout_marginLeft="@dimen/Margin10Size"
                android:text="@string/AddedIn"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorBlack"/>
            <TextView
                android:id="@+id/LibraryOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/RecentOne"
                android:layout_marginLeft="@dimen/Margin10Size"
                android:text="@string/AlbumLibrary"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/colorHighLight"/>
            <ImageView
                android:id="@+id/PlayOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/LibraryOne"
                android:src="@drawable/playbutton16"
                android:layout_marginLeft="@dimen/Margin10Size" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PlayLabel"
                android:textSize="@dimen/TinyTextSize"
                android:layout_alignBottom="@+id/PlayOne"
                android:layout_toRightOf="@+id/PlayOne"
                android:layout_toEndOf="@+id/PlayOne"
                android:textColor="@color/colorPlay"/>
            <ImageView
                android:id="@+id/MusicTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/musicplayer128"
                android:layout_alignParentRight="true"
                android:layout_marginRight="@dimen/Margin10Size"/>
            <TextView
                android:id="@+id/RecentTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AddedIn"
                android:layout_below="@+id/MusicTwo"
                android:layout_alignRight="@id/MusicTwo"
                android:layout_marginRight="@dimen/Margin10Size"
                android:textColor="@color/colorBlack"
                android:textAppearance="?android:textAppearanceSmall"/>
            <TextView
                android:id="@+id/LibraryTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ArtistsLibrary"
                android:layout_below="@+id/RecentTwo"
                android:layout_alignRight="@+id/RecentTwo"
                android:layout_marginRight="@dimen/Margin25Size"
                android:textColor="@color/colorHighLight"
                android:textAppearance="?android:textAppearanceSmall" />
            <ImageView
                android:id="@+id/PlayTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/playbutton16"
                android:layout_below="@+id/LibraryTwo"
                android:layout_alignLeft="@+id/LibraryTwo" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/PlayLabel"
                android:textSize="@dimen/TinyTextSize"
                android:textColor="@color/colorPlay"
                android:layout_toEndOf="@+id/PlayTwo"
                android:layout_toRightOf="@+id/PlayTwo"
                android:layout_alignBottom="@+id/PlayTwo" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
    </ScrollView>