<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.tagreed.abnd.musicalapp.LaibraryActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="@dimen/WidthLinearVerticalSize"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent">
            <TextView
                android:id="@+id/ArtistLibrary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ArtistsLibrary"
                android:textColor="@color/colorBlack"
                android:textStyle="bold"
                android:textSize="@dimen/Margin30Size"
                android:padding="@dimen/Margin10Size"/>
            <TextView
                android:id="@+id/ExploreArtistLibrary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ExploreLabel"
                android:textColor="@color/colorBlack"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_alignBaseline="@id/ArtistLibrary"
                android:layout_alignBottom="@id/ArtistLibrary"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="@dimen/WidthLinearVerticalSize"
            android:layout_height="wrap_content"
            android:background="@color/colorAlbumLibrary">
            <TextView
                android:id="@+id/AlbumLibrary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AlbumLibrary"
                android:textSize="@dimen/Margin30Size"
                android:textStyle="bold"
                android:textColor="@color/colorBlack"
                android:padding="@dimen/Margin10Size"/>
            <TextView
                android:id="@+id/ExploreAlbumLibrary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ExploreLabel"
                android:textColor="@color/colorBlack"
                android:textAppearance="?android:textAppearanceSmall"
                android:layout_alignBaseline="@id/AlbumLibrary"
                android:layout_alignBottom="@id/AlbumLibrary"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/LibraryActivityDescription"
            android:layout_marginTop="@dimen/Margin10Size"/>
    </LinearLayout>
</LinearLayout>
</ScrollView>
